#pragma once

#include <webserv/http/HttpRequest.hpp>
#include <webserv/http/HttpResponse.hpp>

class Router
{
  public:
    Router();

};